[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/menu_button.gd" type="Script" id=1]
[ext_resource path="res://images/ui/brush_clean.png" type="Texture" id=2]
[ext_resource path="res://images/ui/winner.png" type="Texture" id=3]
[ext_resource path="res://fonts/RAYJOHNS.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 432.0
margin_bottom = 291.0

[node name="Win" type="TextureRect" parent="VBoxContainer/CenterContainer"]
margin_left = 46.0
margin_right = 386.0
margin_bottom = 291.0
rect_pivot_offset = Vector2( 170, 145.5 )
texture = ExtResource( 3 )

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 295.0
margin_right = 432.0
margin_bottom = 340.0

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 78.0
margin_right = 354.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 128, 22.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer2/Button"]
margin_left = 67.3028
margin_top = 2.86395
margin_right = 131.303
margin_bottom = 39.864
custom_fonts/font = SubResource( 1 )
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="VBoxContainer/CenterContainer2/Button"]
wait_time = 0.1
[connection signal="button_down" from="VBoxContainer/CenterContainer2/Button" to="VBoxContainer/CenterContainer2/Button" method="set_button_scale" binds= [ 1.0 ]]
[connection signal="button_up" from="VBoxContainer/CenterContainer2/Button" to="VBoxContainer/CenterContainer2/Button" method="set_button_scale" binds= [ 1.1 ]]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer2/Button" to="VBoxContainer/CenterContainer2/Button" method="set_painted" binds= [ true ]]
[connection signal="mouse_exited" from="VBoxContainer/CenterContainer2/Button" to="VBoxContainer/CenterContainer2/Button" method="set_painted" binds= [ false ]]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/Button" to="VBoxContainer/CenterContainer2/Button/Timer" method="start"]
[connection signal="timeout" from="VBoxContainer/CenterContainer2/Button/Timer" to="VBoxContainer/CenterContainer2/Button" method="set_scene" binds= [ "res://scenes/Menu.tscn" ]]
